--- a/hackuniversity-community-platforms.html
+++ b/hackuniversity-community-platforms.html
@@ -476,7 +476,7 @@
       #8 Form must be submitted from allowed domain only.
     */
     const ALLOWED_ORIGIN = "https://codecrunchglobal.vercel.app";
-    const API_URL = "https://script.google.com/macros/s/AKfycbx15_JMFHH-WSgp7HnE_gT2NeyylzJBh0XLbSpoHE-1cnThk_8natvGsFexxNWIPGHhRA/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbxBHDPNloqm6ll97Ib0LNco_0JPQjXTHlyvluxwX0XSVB9zxpDDubnE5IrJTzscgdfk-w/exec";
 
     const form = document.getElementById("community-access-form");
     const submitBtn = document.getElementById("submit-btn");
@@ -585,6 +585,7 @@
           email,
           agreeTerms: agreeTerms ? "yes" : "no",
           agreeMlh: agreeMlh ? "yes" : "no",
+          origin: window.location.origin,
           pageUrl: window.location.href,
           userAgent: navigator.userAgent
         });
