--- a/hackuniversity-community-platforms.html
+++ b/hackuniversity-community-platforms.html
@@ -418,14 +418,7 @@
             </span>
           </label>
 
-          <div class="consent-actions">
-            <a class="consent-btn" href="https://codecrunchglobal-termsandconditio.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fa-solid fa-file-contract"></i> Open Terms
-            </a>
-            <a class="consent-btn" href="https://codecrunchglobal-termsandconditio.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <i class="fa-solid fa-scale-balanced"></i> Open MLH Section
-            </a>
-          </div>
+
         </div>
 
         <button id="submit-btn" type="submit" class="btn btn-main">
@@ -444,6 +437,7 @@
           <a id="mailing-link" class="btn join-link" href="#" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-envelope"></i> Join Mailing List</a>
         </div>
         <p class="notice">For security, community invites are only available after verification.</p>
+        <p class="notice">For security, community invites are only available after verification. If you do not have a GroupMe account, the invite link will prompt you to create one first, then you must reopen the invite link to join.</p>
       </div>
     </section>
   </main>
