--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -772,8 +772,11 @@
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.discord" target="_blank" rel="noopener noreferrer">
               <i class="fa-brands fa-discord"></i> Join Discord (OneStop Required)
             </a>
-            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.hackuniversityplatforms" target="_blank" rel="noopener noreferrer">
+            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.hackuniversityplatforms" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-user-group"></i> GroupMe / Instagram Group Chat
+            </a>
+                        <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.hackuniversityplatforms" target="_blank" rel="noopener noreferrer">
+              <i class="fa-solid fa-user-group"></i> Join the mailing list (Gmail account required)
             </a>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-people-group"></i> Apply for the Student Executive Board
@@ -1190,7 +1193,7 @@
     { key: "resource.studentLogin", href: "https://hackuniversity-onestop.vercel.app/", newTab: true },
         { key: "resource.companyPortal", href: "https://codecrunchglobal.vercel.app/hackuniversitydonate.html", newTab: true },
             { key: "resource.volunteerPortal", href: "https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html", newTab: true },
-
+  { key: "resource.hackuniversityplatforms", href: "https://hackuniversityplatforms.vercel.app/", newTab: true },
 
     { key: "hero.photos", href: "https://hackuniversity-photos.vercel.app/", newTab: true },
     { key: "student.join", href: "https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html", newTab: true },
@@ -1206,7 +1209,7 @@
     { key: "student.HackathonWinners", href: "https://codecrunchglobal.vercel.app/hackuniversity-hackwinners.html", newTab: true },
     { key: "student.MembershipCertificates", href: "https://codecrunchglobal.vercel.app/hackuniversity-certifcatemembership.html", newTab: true },
     { key: "student.discord", href: "https://codecrunchglobal.vercel.app/hackuniversity-discord.html", newTab: true },
-    { key: "student.hackuniversityplatforms", href: "https://hackuniversityplatforms.vercel.app/", newTab: true },
+  
     { key: "company.portal", href: "https://codecrunchglobal.vercel.app/hackuniversitydonate.html", newTab: false },
     { key: "volunteer.portal", href: "https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html", newTab: false }
   ];
