--- a/hackuniversity-community-platforms.html
+++ b/hackuniversity-community-platforms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hack University - Community Platforms Access</title>
+  <title>Hack University - Community Platforms and Mailing List Access</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <style>
     :root {
@@ -361,9 +361,9 @@
 
   <main class="container">
     <section class="card">
-      <h1>Community Platforms </h1>
-      <p class="sub">Access to private instagram group and GroupMe (If not acccount, the invite link will promt you to create an account first)</p>
-      <p class="sub">Enter your details to join the community platforms and mailing list</p>
+      <h1>Community Platforms and Mailing List</h1>
+      <p class="sub">This form is for joining Hack University community platforms and the mailing list.</p>
+      <p class="sub">After you submit and complete authentication/verification, your access buttons will appear so you can join GroupMe, the private Instagram group, and mailing list resources.</p>
 
       <form id="community-access-form" novalidate>
         <div class="grid field-row">
