--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -729,7 +729,11 @@
           <div class="portal-menu">
             <p class="portal-menu-label">Get Started</p>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.studentLogin">
-              <i class="fa-solid fa-right-to-bracket"></i> Student Login (13+ | OneStop Form)
+              <i class="fa-solid fa-right-to-bracket"></i>
+              <span>
+                Student Login<br>
+                <span style="font-size:.8rem;font-weight:600;opacity:.85;">(13+ | OneStop Form)</span>
+              </span>
             </a>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-rocket"></i> Join Membership Hack University (13+ | OneStop Form)
