--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -261,50 +261,10 @@
     <section class="card" style="margin-top: 2rem;">
       <h2 class="card-title">🏆 Who Can Request Certificates?</h2>
       <div class="card-description">
-        <p>Certificates are available for verified participants who contributed to our hackathon events in official capacities:</p>
+        <p>Certificates are available for elegible & verified volunteers who contributed to our hackathon events in official capacities</p>
       </div>
 
-      <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1.5rem;margin-top:1.5rem;">
-        <div style="background: rgba(0, 255, 65, 0.1); padding: 1.5rem; border-radius: 12px; border-left: 4px solid var(--matrix-green);">
-          <h3 style="color: var(--matrix-green); margin-bottom: 1rem; font-size: 1.2rem;">👨‍⚖️ Judges & Evaluators</h3>
-          <ul style="color: var(--text-secondary); font-family: 'Courier New', monospace; line-height: 1.6;">
-            <li>Technical project evaluators</li>
-            <li>Industry expert judges</li>
-            <li>Academic review panel members</li>
-            <li>Presentation assessment judges</li>
-          </ul>
-        </div>
 
-        <div style="background: rgba(0, 212, 255, 0.1); padding: 1.5rem; border-radius: 12px; border-left: 4px solid var(--cyber-blue);">
-          <h3 style="color: var(--cyber-blue); margin-bottom: 1rem; font-size: 1.2rem;">👨‍🏫 Mentors & Advisors</h3>
-          <ul style="color: var(--text-secondary); font-family: 'Courier New', monospace; line-height: 1.6;">
-            <li>Technical mentors</li>
-            <li>Business development advisors</li>
-            <li>Subject matter experts</li>
-            <li>Workshop facilitators</li>
-          </ul>
-        </div>
-
-        <div style="background: rgba(255, 0, 128, 0.1); padding: 1.5rem; border-radius: 12px; border-left: 4px solid var(--neon-pink);">
-          <h3 style="color: var(--neon-pink); margin-bottom: 1rem; font-size: 1.2rem;">🏢 Industry Partners</h3>
-          <ul style="color: var(--text-secondary); font-family: 'Courier New', monospace; line-height: 1.6;">
-            <li>Sponsor representatives</li>
-            <li>Corporate volunteers</li>
-            <li>Industry speakers</li>
-            <li>Partnership coordinators</li>
-          </ul>
-        </div>
-
-        <div style="background: rgba(138, 43, 226, 0.1); padding: 1.5rem; border-radius: 12px; border-left: 4px solid var(--hacker-purple);">
-          <h3 style="color: var(--hacker-purple); margin-bottom: 1rem; font-size: 1.2rem;">📋 Event Team</h3>
-          <ul style="color: var(--text-secondary); font-family: 'Courier New', monospace; line-height: 1.6;">
-            <li>Event organizers</li>
-            <li>Logistics coordinators</li>
-            <li>Technical support volunteers</li>
-            <li>Academic partners</li>
-          </ul>
-        </div>
-      </div>
     </section>
 
     <!-- Certificate Value Section -->
@@ -403,7 +363,7 @@
             <span class="faq-arrow">▼</span>
           </button>
           <div class="faq-answer">
-            <p><strong>Yes.</strong> Certificates are issued by Code Crunch, supported by FIU Honors College, FIU Business, and Pino Global, and are suitable for professional documentation.</p>
+            <p><strong>Yes.</strong> Certificates are issued by Code Crunch, supported by Hack University Worldwide, Google Developer Group at FIU, CAHSI at FIU, ColorStack at FIU, and Raspberry Pi Code Crunch.</p>
           </div>
         </div>
 
