--- a/hackuniversity-community-platforms.html
+++ b/hackuniversity-community-platforms.html
@@ -393,7 +393,7 @@
             <input id="grad-year" name="graduationYear" type="text" maxlength="40" placeholder="Ex: Sophomore / Spring / 2028" required />
           </div>
           <div>
-            <label for="personal-email">Personal Email</label>
+            <label for="personal-email">Personal GMAIL</label>
             <input id="personal-email" name="personalEmail" type="email" autocomplete="email" placeholder="name@gmail.com" required />
           </div>
         </div>
